// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecurityItem component should render default view with inherited security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1va8ro3-MuiGrid-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-imw6ub-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
    >
      Inherited
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
  >
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-c95u6h-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors["default"].validationErrors.required;
}"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          aria-required="true"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-0-input"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render default view with overridden security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1va8ro3-MuiGrid-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-imw6ub-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
  >
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-c95u6h-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors["default"].validationErrors.required;
}"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          aria-required="true"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-0-input"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render view for a subsequent file 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1va8ro3-MuiGrid-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-imw6ub-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
  >
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-c95u6h-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-2-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors["default"].validationErrors.required;
}"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-2-select"
          aria-required="true"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-2-select"
          id="dsi-security-policy-2-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-2-label"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-2-input"
          data-testid="dsi-security-policy-2-input"
          id="dsi-security-policy-2-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
